regression/fail/pat.2.sml
val {x, x} = {x = 13}
